# behavioural-modelling-suite

./: .gitignore  LICENSE  README.md  app.py  behaviour_modelling.sh  pyproject.toml  requirements.txt
data/examples/: bayesian_example.csv  bayesian_validation.csv  ddm_example.csv  ddm_validation.csv  kalman_example.csv
pages/: 1_Bayesian_Integration.py  2_Drift_Diffusion.py  3_Kalman_Filter.py  3_Validation.py  4_Validation.py  5_About.py
src/models/: bayesian.py  ddm.py  kalman.py
src/utils/: data_generation.py  data_validation.py  validation.py
tests/: test_bayesian.py  test_data_validation.py  test_ddm.py  test_kalman.py
