[project]
name = "behavioural-modelling-suite"
version = "0.1.0"
description = "Interactive suite of computational behavioural models"
requires-python = "==3.14.4"
dependencies = [
    "numpy~=2.4",
    "scipy~=1.17",
    "pandas~=3.0",
    "matplotlib~=3.10",
    "plotly~=6.7",
    "streamlit~=1.56",
]

[dependency-groups]
dev = [
    "pytest~=9.0",
]
