[project]
name = "behavioural-modelling-suite"
version = "0.1.0"
description = "Interactive suite of computational behavioural models"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0,<3.0",
    "scipy>=1.13,<2.0",
    "pandas>=2.3,<3.0",
    "matplotlib>=3.9,<4.0",
    "plotly>=6.0,<7.0",
    "streamlit>=1.50,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
